--- a/GoogleCloudExtension/TestingHelpers/packages.config
+++ b/GoogleCloudExtension/TestingHelpers/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
+  <package id="Moq" version="4.8.2" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
 </packages>
